Fix scroll and dropdown on mobile nav

--- a/html/css/theme-oc.css
+++ b/html/css/theme-oc.css
@@ -6629,6 +6629,16 @@ ol.list {
       flex-direction: row;
       align-items: center;
       margin-left: auto; }
+      .navbar .navbar-mobile .navbar-nav .dropdown-menu {
+        border: none;
+        border-radius: 12px;
+        box-shadow: 0 0 8px 2px rgba(0, 0, 0, 0.03), 0 16px 24px 0;
+        padding-top: 15px;
+        padding-left: 5px;
+        padding-right: 5px;
+        left: -91px;
+        z-index: 1010;
+        position: absolute; }
   .navbar .menu-mobile {
     display: block;
     width: 80%;
@@ -6975,6 +6985,10 @@ ol.list {
         font-weight: 400;
         color: #334652;
         opacity: .6; }
+
+.scroll-menu {
+  overflow: auto;
+  height: 350px; }
 
 .alert-msg {
   position: relative;
